--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "prettier": "^2.4.1",
     "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "standard": "^17.1.0",
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=16"
